tests/snapshots/parser__illegal_update_operation_with_query.snap
---
source: tests/parser.rs
expression: out
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 0,
        },
        source: "q.random()++",
        body: Empty,
    },
    errors: [
        Diagnostic {
            inner: DiagnosticInner {
                message: "`++` and `--` can only be used on `variable.*` and `temp.*`",
                labels: Some(
                    [
                        LabeledSpan {
                            label: None,
                            span: SourceSpan {
                                offset: SourceOffset(
                                    0,
                                ),
                                length: 10,
                            },
                            primary: false,
                        },
                    ],
                ),
                help: None,
                severity: Error,
            },
        },
    ],
    panicked: true,
}
