tests/snapshots/parser__loop.snap
---
source: tests/parser.rs
expression: out
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 27,
        },
        source: "loop(10, {v.i = v.i + 1;});",
        body: Complex(
            [
                Loop(
                    LoopStatement {
                        span: Span {
                            start: 0,
                            end: 26,
                        },
                        count: NumericLiteral(
                            NumericLiteral {
                                span: Span {
                                    start: 5,
                                    end: 7,
                                },
                                value: 10.0,
                                raw: "10",
                            },
                        ),
                        block: BlockExpression {
                            span: Span {
                                start: 9,
                                end: 25,
                            },
                            statements: [
                                Assignment(
                                    AssignmentStatement {
                                        span: Span {
                                            start: 10,
                                            end: 23,
                                        },
                                        left: VariableExpression {
                                            span: Span {
                                                start: 10,
                                                end: 13,
                                            },
                                            lifetime: Variable,
                                            member: Property {
                                                property: IdentifierReference {
                                                    span: Span {
                                                        start: 12,
                                                        end: 13,
                                                    },
                                                    name: "i",
                                                },
                                            },
                                        },
                                        right: Binary(
                                            BinaryExpression {
                                                span: Span {
                                                    start: 16,
                                                    end: 23,
                                                },
                                                left: Variable(
                                                    VariableExpression {
                                                        span: Span {
                                                            start: 16,
                                                            end: 19,
                                                        },
                                                        lifetime: Variable,
                                                        member: Property {
                                                            property: IdentifierReference {
                                                                span: Span {
                                                                    start: 18,
                                                                    end: 19,
                                                                },
                                                                name: "i",
                                                            },
                                                        },
                                                    },
                                                ),
                                                operator: Addition,
                                                right: NumericLiteral(
                                                    NumericLiteral {
                                                        span: Span {
                                                            start: 22,
                                                            end: 23,
                                                        },
                                                        value: 1.0,
                                                        raw: "1",
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    },
                ),
            ],
        ),
    },
    errors: [],
    panicked: false,
}
