tests/snapshots/parser__loop_in_block.snap
---
source: tests/parser.rs
expression: out
---
ParseResult {
    program: Program {
        span: Span {
            start: 13,
            end: 98,
        },
        source: "\n            {\n                v.i = 1;\n                loop(10, {v.i = v.i + 1;});\n            };\n        ",
        body: Complex(
            [
                Expression(
                    Block(
                        BlockExpression {
                            span: Span {
                                start: 13,
                                end: 97,
                            },
                            statements: [
                                Assignment(
                                    AssignmentStatement {
                                        span: Span {
                                            start: 31,
                                            end: 38,
                                        },
                                        left: VariableExpression {
                                            span: Span {
                                                start: 31,
                                                end: 34,
                                            },
                                            lifetime: Variable,
                                            member: Property {
                                                property: Identifier {
                                                    span: Span {
                                                        start: 33,
                                                        end: 34,
                                                    },
                                                    name: "i",
                                                },
                                            },
                                        },
                                        operator: Assign,
                                        right: NumericLiteral(
                                            NumericLiteral {
                                                span: Span {
                                                    start: 37,
                                                    end: 38,
                                                },
                                                value: 1.0,
                                                raw: "1",
                                            },
                                        ),
                                    },
                                ),
                                Loop(
                                    LoopStatement {
                                        span: Span {
                                            start: 56,
                                            end: 82,
                                        },
                                        count: NumericLiteral(
                                            NumericLiteral {
                                                span: Span {
                                                    start: 61,
                                                    end: 63,
                                                },
                                                value: 10.0,
                                                raw: "10",
                                            },
                                        ),
                                        block: BlockExpression {
                                            span: Span {
                                                start: 65,
                                                end: 81,
                                            },
                                            statements: [
                                                Assignment(
                                                    AssignmentStatement {
                                                        span: Span {
                                                            start: 66,
                                                            end: 79,
                                                        },
                                                        left: VariableExpression {
                                                            span: Span {
                                                                start: 66,
                                                                end: 69,
                                                            },
                                                            lifetime: Variable,
                                                            member: Property {
                                                                property: Identifier {
                                                                    span: Span {
                                                                        start: 68,
                                                                        end: 69,
                                                                    },
                                                                    name: "i",
                                                                },
                                                            },
                                                        },
                                                        operator: Assign,
                                                        right: Binary(
                                                            BinaryExpression {
                                                                span: Span {
                                                                    start: 72,
                                                                    end: 79,
                                                                },
                                                                left: Variable(
                                                                    VariableExpression {
                                                                        span: Span {
                                                                            start: 72,
                                                                            end: 75,
                                                                        },
                                                                        lifetime: Variable,
                                                                        member: Property {
                                                                            property: Identifier {
                                                                                span: Span {
                                                                                    start: 74,
                                                                                    end: 75,
                                                                                },
                                                                                name: "i",
                                                                            },
                                                                        },
                                                                    },
                                                                ),
                                                                operator: Addition,
                                                                right: NumericLiteral(
                                                                    NumericLiteral {
                                                                        span: Span {
                                                                            start: 78,
                                                                            end: 79,
                                                                        },
                                                                        value: 1.0,
                                                                        raw: "1",
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                ),
                                            ],
                                        },
                                    },
                                ),
                            ],
                        },
                    ),
                ),
            ],
        ),
    },
    errors: [],
    panicked: false,
}
