tests/snapshots/parser__loop_in_expression.snap
---
source: tests/parser.rs
expression: out
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 0,
        },
        source: "1 + loop(10, {0;})",
        body: Empty,
    },
    errors: [
        Diagnostic {
            inner: DiagnosticInner {
                message: "A loop cannot be used in expressions",
                labels: Some(
                    [
                        LabeledSpan {
                            label: None,
                            span: SourceSpan {
                                offset: SourceOffset(
                                    4,
                                ),
                                length: 1,
                            },
                            primary: false,
                        },
                    ],
                ),
                help: Some(
                    "Try defining it in a statement",
                ),
                severity: Error,
            },
        },
    ],
    panicked: true,
}
